# haven-cli

./: .gitignore  README.md  pyproject.toml
docs/: api.md  cli-reference.md  configuration.md  generate_cli_ref.py  lit-payments.md  plugins.md  troubleshooting.md  user-guide.md  youtube_plugin.md
haven_cli/: __init__.py  config.py  main.py
haven_cli/cli/: __init__.py  config.py  download.py  error_handler.py  exit_codes.py  jobs.py  output.py  plugins.py  progress.py  prompts.py  run.py  upload.py
haven_cli/crypto/: __init__.py  metadata.py
haven_cli/daemon/: __init__.py  pid.py  service.py
haven_cli/database/: connection.py  models.py  repositories.py
haven_cli/js_runtime/: __init__.py  bridge.py  discovery.py  manager.py  protocol.py
haven_cli/media/: __init__.py  exceptions.py  frames.py  metadata.py  phash.py  thumbnail.py
haven_cli/pipeline/: __init__.py  context.py  events.py  manager.py  results.py  step.py
haven_cli/pipeline/steps/: __init__.py  analyze_step.py  encrypt_step.py  ingest_step.py  sync_step.py  upload_step.py
haven_cli/plugins/: __init__.py  base.py  manager.py  registry.py
haven_cli/plugins/builtin/: __init__.py  youtube.py
haven_cli/scheduler/: __init__.py  job_executor.py  job_scheduler.py  source_tracker.py
haven_cli/services/: __init__.py  arkiv_sync.py  blockchain_network.py  evm_utils.py
haven_cli/vlm/: __init__.py  config.py  engine.py  parsing.py  processor.py  prompts.py
js-services/: browser-shim.ts  deno.json  hybrid-crypto.ts  lit-payment.ts  lit-storage.ts  lit-wrapper.ts  lit-wrapper_test.ts  main.ts  synapse-wrapper.ts  synapse-wrapper_test.ts  types.ts  viem-adapter.ts
tests/: __init__.py  test_config.py  test_js_bridge_manager.py
tests/cli/: test_download.py  test_error_handler.py  test_exit_codes.py  test_output.py  test_progress.py  test_prompts.py  test_run.py
tests/crypto/: __init__.py  test_metadata.py
tests/daemon/: test_pid.py  test_service.py
tests/media/: test_exceptions.py  test_frames.py  test_metadata.py  test_phash.py  test_thumbnail.py
tests/pipeline/: test_encrypt_step.py  test_sync_step.py  test_upload_step.py
tests/plugins/: __init__.py  test_youtube_plugin.py
tests/scheduler/: test_job_executor.py  test_job_scheduler.py
tests/services/: __init__.py  test_arkiv_sync.py  test_evm_utils.py
tests/vlm/: __init__.py  test_config.py  test_engine.py  test_parsing.py  test_processor.py  test_prompts.py
