[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haven-cli"
version = "0.1.0"
description = "Event-driven data pipeline CLI for media archival and processing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["cli", "pipeline", "media", "archival", "filecoin", "encryption"]
authors = [
    { name = "Haven Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
media = [
    "python-magic>=0.4.27",
]
vlm = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]
blockchain = [
    "arkiv>=0.1.0",
    "web3>=6.0.0",
    "eth-account>=0.11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-Pillow>=10.0.0",
    "respx>=0.20.0",
]

[project.scripts]
haven = "haven_cli.main:app"

[project.urls]
Documentation = "https://github.com/haven/haven-cli#readme"
Issues = "https://github.com/haven/haven-cli/issues"
Source = "https://github.com/haven/haven-cli"

[tool.hatch.build.targets.wheel]
packages = ["haven_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
