[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haven-cli"
version = "0.1.0"
description = "Event-driven data pipeline CLI for media archival and processing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["cli", "pipeline", "media", "archival", "filecoin", "encryption"]
authors = [
    { name = "Haven Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving",
]
dependencies = [
    "typer==0.21.1",
    "rich==14.3.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "apscheduler==3.11.2",
    "croniter==6.0.0",
    "aiofiles==25.1.0",
    "httpx==0.28.1",
    "Pillow==12.1.0",
    "ImageHash==4.3.2",
    "SQLAlchemy==2.0.46",
    "fastapi==0.128.3",
    "uvicorn==0.40.0",
    "unidecode==1.4.0",
    "python-dotenv==1.2.1",
    "vlm-engine==0.9.1",
    "livekit==1.0.25",
    "psutil==7.2.2",
    "av==16.1.0",
    "python-multipart==0.0.22",
    "arkiv-sdk==1.0.0b1",
    "yt-dlp==2026.2.4",
    "libtorrent==2.0.11; python_version < '3.14'",
    'libtorrent @ ./wheels/libtorrent-2.0.11-cp314-cp314-linux_x86_64.whl; python_version == "3.14" and platform_system == "Linux" and platform_machine == "x86_64"',
    "requests==2.32.5",
    "aiortc==1.14.0",
]

[project.optional-dependencies]
media = [
    "python-magic==0.4.27",
]
vlm = [
    "openai==2.17.0",
    "google-generativeai==0.8.6",
]
blockchain = [
    "web3==7.14.1",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "mypy==1.19.1",
    "ruff==0.15.0",
    "types-Pillow==10.2.0.20240822",
    "respx==0.22.0",
]

[project.scripts]
haven = "haven_cli.main:app"

[project.urls]
Documentation = "https://github.com/haven/haven-cli#readme"
Issues = "https://github.com/haven/haven-cli/issues"
Source = "https://github.com/haven/haven-cli"

[tool.hatch.build.targets.wheel]
packages = ["haven_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
